--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,6 @@ repositories {
 
 dependencies {
     providedCompile group: 'javax', name: 'javaee-api', version:'7.0'
-    //providedCompile group: 'org.primefaces', name: 'primefaces', version: '5.3'
+    compile group: 'org.primefaces', name: 'primefaces', version: '5.3'
 
 }
